--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,14 +1,25 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      <h6>Ionic 2 d3 Sample - Vizuly Radial Progress</h6>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div id="viz_container" class="z-depth-3"
+             style="margin:0px auto; width:100%; height:100%; padding-top:25px;">
+
+            <div id="div1" class="radial_container"></div>
+        </div>
+  
+  <main>
+    <div class="container" style="width:100%">
+        
+
+    </div>
+
+  </main>
+
+  <p id="display"></p>
 </ion-content>
