--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,19 @@
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
+
+<!-- Vizuly specific style sheets -->
+    <link rel="stylesheet" href="build/lib/styles/vizuly.css">
+    <link rel="stylesheet" href="build/lib/styles/vizuly_radial_progress.css">
+
+
+
+    <!-- D3.js ... of course! -->
+    <script src="build/lib/d3.min.js"></script>
+
+    <script src="build/lib/vizuly_core.min.js"></script>
+	<script src="build/lib/vizuly_radialprogress.min.js"></script>
+
 </head>
 
 <body>
@@ -17,6 +30,7 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
@@ -24,6 +38,8 @@
   <script src="build/js/zone.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+
+  
 </body>
 
 </html>
